--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@
 /test/dummy/db/*.sqlite3
 /test/dummy/db/*.sqlite3-*
 /test/dummy/log/*.log
+/test/dummy/node_modules
 /test/dummy/storage/
 /test/dummy/tmp/
