--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "packageManager": "yarn@4.1.1",
     "build": "cd test/dummy && yarn build && bin/rails tailwindcss:build",
     "heroku-postbuild": "yarn build"
   }
