--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "scripts": {
     "build": "cd test/dummy && npm install && bin/rails tailwindcss:build && bin/rails assets:precompile",
     "heroku-postbuild": "npm run build"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
