--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "build": "npm install --global yarn && cd test/dummy && npm install && bin/rails tailwindcss:build && bin/rails assets:precompile",
-    "heroku-postbuild": "yarn build"
+    "heroku-postbuild": "npm run build"
   },
   "packageManager": "npm",
   "engines": {
