--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
-    "build": "cd test/dummy && yarn install && bin/rails tailwindcss:build && bin/rails assets:precompile",
-    "heroku-postbuild": "yarn build"
+    "build": "SKIP_YARN_INSTALL=true && cd test/dummy && npm install && bin/rails tailwindcss:build && bin/rails assets:precompile",
+    "heroku-postbuild": "npm build"
   },
-  "packageManager": "yarn@4.1.1",
+  "packageManager": "npm",
   "engines": {
     "node": "21.x"
   }
