--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /test/dummy/node_modules
 /test/dummy/storage/
 /test/dummy/tmp/
+/test/dummy/app/assets/builds/*
+!/test/dummy/app/assets/builds/.keep
