--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,7 @@
 /test/dummy/node_modules
 /test/dummy/storage/
 /test/dummy/tmp/
+/test/dummy/public/assets/*
+!/test/dummy/public/assets/.keep
 /test/dummy/app/assets/builds/*
 !/test/dummy/app/assets/builds/.keep
